--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.0
   screenshot: ^2.1.0
+  flutter_lints: ^3.0.0
+  url_launcher: ^6.1.14
+
 
 dev_dependencies:
   flutter_test:
