--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.0
   screenshot: ^2.1.0
-  flutter_lints: ^3.0.0
+  # flutter_lints: ^3.0.0
   url_launcher: ^6.1.14
   shared_preferences: ^2.0.5
 
@@ -56,6 +56,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
+  flutter_lints: ^3.0.0
+  integration_test:
+    sdk: flutter
 
 flutter_launcher_icons:
   android: "launcher_icon"
